--- a/style.css
+++ b/style.css
@@ -4,26 +4,13 @@ body {
     background: #1A253C;
 }
 
-#title {
-    color: #fff;
-}
-
-#description {
-    text-align: center;
-}
-
-#survey-form {
-    max-width: 50%;
-    margin: auto;
-}
-
-.header {
+#header {
     max-width: 960px;
     margin: auto;
     text-align: center;
 }
 
-.logo {
+#logo {
     max-width: 100%;
     display: block;
     height: auto;
@@ -32,19 +19,66 @@ body {
     margin: auto;
 }
 
-.main {
+#title {
+    color: #fff;
+}
+
+#main {
     background: #f0f0f0;
     max-width: 960px;
     margin: auto;
     padding: 20px;
 }
 
-.footer {
+#description {
+    text-align: center;
+}
+
+#survey-form {
+    max-width: 75%;
+    margin: auto;
+}
+
+#name, #email, #number {
+    width: 80%;
+    height: 25px;
+}
+
+#comments {
+    width: 80%;
+    height: 100px;
+}
+
+#rating {
+    text-align: center;
+}
+
+#submit-btn {
+    text-align: center;
+}
+
+#footer {
     max-width: 960px;
     margin: auto;
     text-align: center;
 }
 
-.trademark {
+#trademark {
     color: #fff;
+}
+
+.form-field {
+    display: flex;
+    margin-bottom: 10px;
+}
+
+.label {
+    width: 50%;
+    text-align: right;
+    margin-right: 5px;
+}
+
+.input {
+    width: 50%;
+    margin-left: 5px;
 }
