--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     font-size: 16px;
+    font-family: "Ubuntu", sans-serif;
     line-height: 1.5em;
     background: #1A253C;
 }
@@ -20,6 +21,7 @@ body {
 }
 
 #title {
+    font-family: "Abel", sans-serif;
     color: #fff;
 }
 
@@ -42,11 +44,13 @@ body {
 #name, #email, #number {
     width: 80%;
     height: 25px;
+    padding-left: 5px;
 }
 
 #comments {
     width: 80%;
     height: 100px;
+    padding-left: 5px;
 }
 
 #rating {
@@ -54,7 +58,19 @@ body {
 }
 
 #submit-btn {
+    margin-top: 20px;
     text-align: center;
+}
+
+#submit-btn button {
+    width: 25%;
+    height: 50px;
+    cursor: pointer;
+    font-size: 1.4em;
+    font-family: "Abel", sans-serif;
+    background-color: #3c311a;
+    border-color: #c9c9c9;
+    color: #fff;
 }
 
 #footer {
@@ -64,6 +80,7 @@ body {
 }
 
 #trademark {
+    font-size: 0.8em;
     color: #fff;
 }
 
@@ -73,6 +90,7 @@ body {
 }
 
 .label {
+    font-size: 1.1em;
     width: 50%;
     text-align: right;
     margin-right: 5px;
