--- a/style.css
+++ b/style.css
@@ -1,8 +1,63 @@
+@media screen and (max-width: 800px) {
+    #survey-form {
+        max-width: 95% !important;
+    }
+
+    #submit-btn button {
+        width: 38% !important;
+    }
+}
+
+@media screen and (max-width: 450px) {
+
+    #submit-btn button {
+        width: 100% !important;
+    }
+    
+    .form-field {
+        flex-direction: column;
+    }
+
+    .label, .input {
+        width: 100% !important;
+    }
+
+    .label {
+        text-align: left !important;
+        margin: 5px;
+    }
+
+    .main-inputs {
+        width: 95% !important;
+    }
+
+    fieldset {
+        padding: 15px;
+    }
+
+    fieldset label {
+        font-size: 0.8em;
+    }
+
+    [type='radio'] {
+        margin-left: 5px !important;
+    }
+    
+}
+
 body {
     font-size: 16px;
     font-family: "Ubuntu", sans-serif;
     line-height: 1.5em;
     background: #1A253C;
+}
+
+fieldset {
+    border-radius: 2px;
+}
+
+legend {
+    font-size: 1.1em;
 }
 
 #header {
@@ -42,15 +97,23 @@ body {
 }
 
 #name, #email, #number {
-    width: 80%;
-    height: 25px;
+    width: 90%;
+    height: 35px;
     padding-left: 5px;
+    font-size: 1.1em;
+}
+
+#dropdown {
+    width: 50%;
+    height: 30px;
+    font-size: 1.1em;
 }
 
 #comments {
-    width: 80%;
+    width: 90%;
     height: 100px;
     padding-left: 5px;
+    font-size: 1.1em;
 }
 
 #rating {
@@ -73,6 +136,10 @@ body {
     color: #fff;
 }
 
+#submit-btn button:hover {
+    opacity: 0.90;
+}
+
 #footer {
     max-width: 960px;
     margin: auto;
@@ -80,7 +147,7 @@ body {
 }
 
 #trademark {
-    font-size: 0.8em;
+    font-size: 0.6em;
     color: #fff;
 }
 
@@ -99,4 +166,22 @@ body {
 .input {
     width: 50%;
     margin-left: 5px;
+}
+
+.main-inputs {
+    border-style: solid;
+    border-radius: 2px;
+    border-color: rgba(0, 0, 0, 0.15);
+}
+
+.main-inputs:hover {
+    border-color: rgba(0, 0, 0, 0.25);
+}
+
+[type='checkbox'] {
+    margin-bottom: 10px;
+}
+
+[type='radio'] {
+    margin-left: 20px;
 }
