--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ legend {
     font-size: 1.4em;
     font-family: "Abel", sans-serif;
     background-color: #3c311a;
-    border-color: #c9c9c9;
+    border-style: none;
     border-radius: 4px;
     color: #fff;
 }
@@ -151,6 +151,10 @@ legend {
 #trademark {
     font-size: 0.6em;
     color: #fff;
+}
+
+.required {
+    color: red;
 }
 
 .form-field {
