--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+
+/**
+** MEDIA QUERIES
+**/
+
 @media screen and (max-width: 800px) {
     #survey-form {
         max-width: 95% !important;
@@ -45,6 +50,10 @@
     
 }
 
+/**
+** GENERAL
+**/
+
 body {
     font-size: 16px;
     font-family: "Ubuntu", sans-serif;
@@ -60,6 +69,10 @@ legend {
     font-size: 1.1em;
 }
 
+/**
+** HEADER/LOGO
+**/
+
 #header {
     max-width: 960px;
     margin: auto;
@@ -74,6 +87,10 @@ legend {
     height: 150px;
     margin: auto;
 }
+
+/**
+** MAIN SURVEY
+**/
 
 #title {
     font-family: "Abel", sans-serif;
@@ -142,6 +159,10 @@ legend {
     opacity: 0.90;
 }
 
+/**
+** FOOTER
+**/
+
 #footer {
     max-width: 960px;
     margin: auto;
@@ -152,6 +173,10 @@ legend {
     font-size: 0.6em;
     color: #fff;
 }
+
+/**
+** CLASSES
+**/
 
 .required {
     color: red;
@@ -183,6 +208,10 @@ legend {
 .main-inputs:hover {
     border-color: rgba(0, 0, 0, 0.25);
 }
+
+/**
+** FORM INPUTS
+**/
 
 [type='checkbox'] {
     margin-bottom: 10px;
